<resources>
    <string name="app_name">CarRace</string>
    <string name="maxspeed">MaxSpeed</string>
    <string name="acceleration">Acceleration</string>
    <string name="deceleration">Deceleration</string>
    <string name="fuel">Fuel</string>
    <string name="description">Description</string>
    <string name="concesionario">Concesionario</string>
    <string name="play">Play</string>
    <string name="select">Select</string>
</resources>