<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmenu"
    tools:context=".SliderCar">



    <ImageButton
        android:id="@+id/arrow_ant"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:background="#E4E4E4"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decelerate"
        app:layout_constraintVertical_bias="0.844"
        app:srcCompat="?attr/homeAsUpIndicator"
        app:tint="#FFA02D"
        tools:ignore="SpeakableTextPresentCheck" />

    <ProgressBar
        android:id="@+id/accelerate"
        style="?android:attr/progressBarStyle"
        android:layout_width="79dp"
        android:layout_height="71dp"
        android:layout_marginTop="412dp"
        android:indeterminateTint="#FFA02D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toEndOf="@+id/decelerate"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/decelerate"
        style="?android:attr/progressBarStyle"
        android:layout_width="79dp"
        android:layout_height="71dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="136dp"
        android:background="#00FFFFFF"
        android:indeterminateTint="#FFA02D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fuel"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxspeed"
        app:layout_constraintVertical_bias="0.014" />

    <ProgressBar
        android:id="@+id/fuel"
        style="?android:attr/progressBarStyle"
        android:layout_width="79dp"
        android:layout_height="71dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="76dp"
        android:indeterminateTint="#FFA02D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accelerate"
        app:layout_constraintVertical_bias="0.014" />

    <ProgressBar
        android:id="@+id/maxspeed"
        style="?android:attr/progressBarStyle"
        android:layout_width="79dp"
        android:layout_height="71dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="412dp"
        android:indeterminateTint="#FFA02D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:text="@string/maxspeed"
        app:layout_constraintBottom_toTopOf="@+id/accelerate"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/acceleration"
        app:layout_constraintBottom_toTopOf="@+id/accelerate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:text="@string/deceleration"
        app:layout_constraintBottom_toTopOf="@+id/decelerate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxspeed"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel"
        app:layout_constraintBottom_toTopOf="@+id/fuel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/accelerate"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/paisaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        app:srcCompat="@drawable/fondo1" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/coches1"
        android:layout_width="130dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/maxspeedvalue"
        android:layout_width="26dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/maxspeed"
        app:layout_constraintEnd_toEndOf="@+id/maxspeed"
        app:layout_constraintStart_toStartOf="@+id/maxspeed"
        app:layout_constraintTop_toTopOf="@+id/maxspeed" />

    <TextView
        android:id="@+id/deceleratevalue"
        android:layout_width="26dp"
        android:layout_height="20dp"

        app:layout_constraintBottom_toBottomOf="@+id/decelerate"
        app:layout_constraintEnd_toEndOf="@+id/decelerate"
        app:layout_constraintStart_toStartOf="@+id/decelerate"
        app:layout_constraintTop_toTopOf="@+id/decelerate" />

    <TextView
        android:id="@+id/fuelvalue"
        android:layout_width="26dp"
        android:layout_height="20dp"

        app:layout_constraintBottom_toBottomOf="@+id/fuel"
        app:layout_constraintEnd_toEndOf="@+id/fuel"
        app:layout_constraintStart_toStartOf="@+id/fuel"
        app:layout_constraintTop_toTopOf="@+id/fuel" />

    <TextView
        android:id="@+id/acceleratevalue"
        android:layout_width="26dp"
        android:layout_height="20dp"

        app:layout_constraintBottom_toBottomOf="@+id/accelerate"
        app:layout_constraintEnd_toEndOf="@+id/accelerate"
        app:layout_constraintStart_toStartOf="@+id/accelerate"
        app:layout_constraintTop_toTopOf="@+id/accelerate" />

    <ImageButton
        android:id="@+id/arrow_post"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginEnd="88dp"
        android:background="#E4E4E4"
        android:rotationY="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel"
        app:layout_constraintVertical_bias="0.841"
        app:srcCompat="?attr/homeAsUpIndicator"
        app:tint="#FFA02D"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>